ws-slo/infrastructure/victoria-metrics/overlays/nishir/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring-system
spec:
  rules:
    - backendRefs:
        - name: grafana-service
          port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-redirect
  namespace: monitoring-system
spec:
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: telemetry
  namespace: monitoring-system
spec:
  rules:
    - backendRefs:
        - name: vminsert-vmks-victoria-metrics-k8s-stack
          port: 8480
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: telemetry-redirect
  namespace: monitoring-system
spec:
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
